Fix image overflowing bottom

--- a/frontend/public/style/style.css
+++ b/frontend/public/style/style.css
@@ -130,8 +130,9 @@
 
 .detailImageView
 {
-  width: 100%;
-  height: 100%; 
+  width: auto;
+  height: 95%; 
+  display: block;
 }
 
 .row
